CSPParser.py
# Generated from CSP.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CSPParser ( Parser ):

    grammarFileName = "CSP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'='", "'channel'", "','", 
                     "':'", "'{'", "'..'", "'}'", "'&'", "'[]'", "'['", 
                     "'||'", "']'", "'[|'", "'|]'", "'|||'", "';'", "'->'", 
                     "'.'", "'STOP'", "'SKIP'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "STOP_RULE", "SKIP_RULE", "BOOL", "ID", 
                      "INT", "WS" ]

    RULE_cspFile = 0
    RULE_processDefinition = 1
    RULE_channelDefinition = 2
    RULE_parameters = 3
    RULE_expression = 4
    RULE_prefixExpression = 5
    RULE_baseExpression = 6
    RULE_eventList = 7
    RULE_event = 8

    ruleNames =  [ "cspFile", "processDefinition", "channelDefinition", 
                   "parameters", "expression", "prefixExpression", "baseExpression", 
                   "eventList", "event" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    STOP_RULE=21
    SKIP_RULE=22
    BOOL=23
    ID=24
    INT=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CspFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def processDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSPParser.ProcessDefinitionContext)
            else:
                return self.getTypedRuleContext(CSPParser.ProcessDefinitionContext,i)


        def channelDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSPParser.ChannelDefinitionContext)
            else:
                return self.getTypedRuleContext(CSPParser.ChannelDefinitionContext,i)


        def getRuleIndex(self):
            return CSPParser.RULE_cspFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCspFile" ):
                listener.enterCspFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCspFile" ):
                listener.exitCspFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCspFile" ):
                return visitor.visitCspFile(self)
            else:
                return visitor.visitChildren(self)




    def cspFile(self):

        localctx = CSPParser.CspFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_cspFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [24]:
                    self.state = 18
                    self.processDefinition()
                    pass
                elif token in [4]:
                    self.state = 19
                    self.channelDefinition()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 22 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==4 or _la==24):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcessDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSPParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(CSPParser.ExpressionContext,0)


        def parameters(self):
            return self.getTypedRuleContext(CSPParser.ParametersContext,0)


        def getRuleIndex(self):
            return CSPParser.RULE_processDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcessDefinition" ):
                listener.enterProcessDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcessDefinition" ):
                listener.exitProcessDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcessDefinition" ):
                return visitor.visitProcessDefinition(self)
            else:
                return visitor.visitChildren(self)




    def processDefinition(self):

        localctx = CSPParser.ProcessDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_processDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(CSPParser.ID)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 25
                self.match(CSPParser.T__0)


            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 28
                self.parameters()


            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 31
                self.match(CSPParser.T__1)


            self.state = 34
            self.match(CSPParser.T__2)
            self.state = 35
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChannelDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CSPParser.ID)
            else:
                return self.getToken(CSPParser.ID, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(CSPParser.INT)
            else:
                return self.getToken(CSPParser.INT, i)

        def getRuleIndex(self):
            return CSPParser.RULE_channelDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChannelDefinition" ):
                listener.enterChannelDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChannelDefinition" ):
                listener.exitChannelDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChannelDefinition" ):
                return visitor.visitChannelDefinition(self)
            else:
                return visitor.visitChildren(self)




    def channelDefinition(self):

        localctx = CSPParser.ChannelDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_channelDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(CSPParser.T__3)
            self.state = 38
            self.match(CSPParser.ID)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 39
                self.match(CSPParser.T__4)
                self.state = 40
                self.match(CSPParser.ID)
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(CSPParser.T__5)
            self.state = 47
            self.match(CSPParser.T__6)
            self.state = 48
            self.match(CSPParser.INT)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 49
                self.match(CSPParser.T__7)
                self.state = 50
                self.match(CSPParser.INT)


            self.state = 53
            self.match(CSPParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CSPParser.ID)
            else:
                return self.getToken(CSPParser.ID, i)

        def getRuleIndex(self):
            return CSPParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = CSPParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(CSPParser.ID)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 56
                self.match(CSPParser.T__4)
                self.state = 57
                self.match(CSPParser.ID)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(CSPParser.BOOL, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CSPParser.ExpressionContext,i)


        def prefixExpression(self):
            return self.getTypedRuleContext(CSPParser.PrefixExpressionContext,0)


        def baseExpression(self):
            return self.getTypedRuleContext(CSPParser.BaseExpressionContext,0)


        def eventList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSPParser.EventListContext)
            else:
                return self.getTypedRuleContext(CSPParser.EventListContext,i)


        def getRuleIndex(self):
            return CSPParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CSPParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 64
                self.match(CSPParser.BOOL)
                self.state = 65
                self.match(CSPParser.T__9)
                self.state = 66
                self.expression(8)
                pass

            elif la_ == 2:
                self.state = 67
                self.prefixExpression()
                pass

            elif la_ == 3:
                self.state = 68
                self.baseExpression()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 100
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = CSPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 71
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 72
                        self.match(CSPParser.T__10)
                        self.state = 73
                        self.expression(8)
                        pass

                    elif la_ == 2:
                        localctx = CSPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 74
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 75
                        self.match(CSPParser.T__11)
                        self.state = 76
                        self.match(CSPParser.T__6)
                        self.state = 77
                        self.eventList()
                        self.state = 78
                        self.match(CSPParser.T__8)
                        self.state = 79
                        self.match(CSPParser.T__12)
                        self.state = 80
                        self.match(CSPParser.T__6)
                        self.state = 81
                        self.eventList()
                        self.state = 82
                        self.match(CSPParser.T__8)
                        self.state = 83
                        self.match(CSPParser.T__13)
                        self.state = 84
                        self.expression(7)
                        pass

                    elif la_ == 3:
                        localctx = CSPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 86
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 87
                        self.match(CSPParser.T__14)
                        self.state = 88
                        self.match(CSPParser.T__6)
                        self.state = 89
                        self.eventList()
                        self.state = 90
                        self.match(CSPParser.T__8)
                        self.state = 91
                        self.match(CSPParser.T__15)
                        self.state = 92
                        self.expression(6)
                        pass

                    elif la_ == 4:
                        localctx = CSPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 94
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 95
                        self.match(CSPParser.T__16)
                        self.state = 96
                        self.expression(5)
                        pass

                    elif la_ == 5:
                        localctx = CSPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 97
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 98
                        self.match(CSPParser.T__17)
                        self.state = 99
                        self.expression(4)
                        pass

             
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PrefixExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def event(self):
            return self.getTypedRuleContext(CSPParser.EventContext,0)


        def expression(self):
            return self.getTypedRuleContext(CSPParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CSPParser.RULE_prefixExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefixExpression" ):
                listener.enterPrefixExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefixExpression" ):
                listener.exitPrefixExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrefixExpression" ):
                return visitor.visitPrefixExpression(self)
            else:
                return visitor.visitChildren(self)




    def prefixExpression(self):

        localctx = CSPParser.PrefixExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_prefixExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.event()
            self.state = 106
            self.match(CSPParser.T__18)
            self.state = 107
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STOP_RULE(self):
            return self.getToken(CSPParser.STOP_RULE, 0)

        def SKIP_RULE(self):
            return self.getToken(CSPParser.SKIP_RULE, 0)

        def ID(self):
            return self.getToken(CSPParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(CSPParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CSPParser.RULE_baseExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseExpression" ):
                listener.enterBaseExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseExpression" ):
                listener.exitBaseExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBaseExpression" ):
                return visitor.visitBaseExpression(self)
            else:
                return visitor.visitChildren(self)




    def baseExpression(self):

        localctx = CSPParser.BaseExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_baseExpression)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.match(CSPParser.STOP_RULE)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(CSPParser.SKIP_RULE)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.match(CSPParser.ID)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.match(CSPParser.T__0)
                self.state = 113
                self.expression(0)
                self.state = 114
                self.match(CSPParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def event(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSPParser.EventContext)
            else:
                return self.getTypedRuleContext(CSPParser.EventContext,i)


        def getRuleIndex(self):
            return CSPParser.RULE_eventList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEventList" ):
                listener.enterEventList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEventList" ):
                listener.exitEventList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventList" ):
                return visitor.visitEventList(self)
            else:
                return visitor.visitChildren(self)




    def eventList(self):

        localctx = CSPParser.EventListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_eventList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.event()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 119
                self.match(CSPParser.T__4)
                self.state = 120
                self.event()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSPParser.ID, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(CSPParser.INT)
            else:
                return self.getToken(CSPParser.INT, i)

        def getRuleIndex(self):
            return CSPParser.RULE_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvent" ):
                listener.enterEvent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvent" ):
                listener.exitEvent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEvent" ):
                return visitor.visitEvent(self)
            else:
                return visitor.visitChildren(self)




    def event(self):

        localctx = CSPParser.EventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_event)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(CSPParser.ID)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 127
                self.match(CSPParser.T__19)
                self.state = 128
                self.match(CSPParser.INT)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[4] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 3)
         




